# picocode

./: .gitignore  .ignore  Cargo.toml  LICENSE  README.md  RELEASE.md  install
design/: picocode_design.md  todo.md
src/: agent_core.rs  app.rs  capability.rs  config.rs  config_editor.rs  event.rs  image.rs  instruction.rs  lib.rs  main.rs  model_picker.rs  session.rs  session_picker.rs  session_tree.rs  submission.rs  terminal.rs  tool.rs  ui.rs  workspace.rs
src/ai/: mod.rs  openai.rs
