[package]
name = "picocode-cli"
version = "0.1.0"
edition = "2021"
description = "A small but real local coding agent workbench."
license = "MIT"
readme = "README.md"
documentation = "https://docs.rs/picocode-cli"
repository = ""
keywords = ["tui", "ai", "coding-agent", "cli", "ratatui"]
categories = ["command-line-interface", "development-tools"]
exclude = [".picocode/*", "design/*", "RELEASE.md", ".DS_Store"]

[lib]
name = "picocode"
path = "src/lib.rs"

[[bin]]
name = "picocode"
path = "src/main.rs"

[dependencies]
arboard = "3"
crossterm = "0.28"
image = "0.25"
ratatui = "0.29"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
unicode-width = "0.2"
